Atualizações solicitadas pelo eliakim 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.port=9090
 # = DATA SOURCE
 # ===============================
 spring.datasource.url=jdbc:mysql://138.197.209.209:3306/trabalho
-spring.datasource.username=grave
+spring.datasource.username=felipe
 spring.datasource.password=grave
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
