--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,25 @@
 server.port=9090
+
 # ===============================
-# = DATA SOURCE
+# = DATA SOURCE PRODUCAO
 # ===============================
-spring.datasource.url=jdbc:mysql://138.197.209.209:3306/trabalho
-spring.datasource.username=felipe
-spring.datasource.password=grave
+#spring.datasource.url=jdbc:mysql://138.197.209.209:3306/trabalho
+#spring.datasource.username=felipe
+#spring.datasource.password=grave
+
+# ===============================
+# = DATA SOURCE HOMOLOGACAO
+# ===============================
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/trabalho
+spring.datasource.username=root
+spring.datasource.password=123456789
+
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
